[package]
name = "cast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
tokio = { version = "1.38.0", features = ["fs", "full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
